--- a/apps/svelte.dev/scripts/create-tutorial-zip/common/src/app.html
+++ b/apps/svelte.dev/scripts/create-tutorial-zip/common/src/app.html
@@ -34,10 +34,12 @@
 
 			body {
 				--border-radius: 4px;
-				--font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+				--font:
+					-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
 					'Open Sans', 'Helvetica Neue', sans-serif;
-				--font-mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas,
-					'DejaVu Sans Mono', monospace;
+				--font-mono:
+					ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
+					monospace;
 				background: var(--bg-1);
 				color: var(--fg-1);
 				font-family: var(--font);
